# galaxy-brain

./: .gitignore  README.md  pyproject.toml
src/: acgan.py  data.py  datasets.py  dcgan.py  div.py  erik.py  main.py  model.py  nathan.py  oldModel.py  old_datasets.py  original.py  run.py  test.py  train.py  utils.py  wgan.py  wgangp.py
src/failed/: erik.py  wgan.py
src/failures/: acgan.py
src2_lol/: acgan.py  cgan.py  datasets.py  dcgan.py  gan.py  utils.py  wgan.py
