[tool.poetry]
name = "galaxy-brain"
version = "0.1.0"
description = "A project with the aim of generating artificial galaxies and worlds"
authors = ["Jonathan Buhler <jonathan@buhler.dev>"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.19.5"
torch = "^1.7.1"
torchvision = "^0.8.2"
h5py = "^3.1.0"
matplotlib = "^3.3.4"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
isort = "^5.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
